--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -21,6 +21,11 @@ a {
     text-decoration: none;
 }
 
+
+
+/*=============================== 
+            NAVBAR 
+================================*/
 .nav {
     position: fixed;
     width: 100%;
@@ -77,6 +82,9 @@ a {
 }
 
 
+/*====================================
+            HAMBURGER 
+=====================================*/
 
 .hamburger {
     position: relative;
@@ -151,6 +159,11 @@ a {
     width: 0%;
     background-color:#e4002b;
 }
+
+
+/*===============================
+        MEDIA QUERY 
+===============================*/
 
 @media(max-width:768px) {
     .nav {
