--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -239,22 +239,21 @@ section .title::after {
 }
 
 .service__box .box__title{
-    font-size: 17px;
-    font-weight: 700;
+    font-size: 1.4rem;
+    font-weight: 500;
     text-transform: uppercase;
-    padding: 1rem 0;
+    margin: 1rem 0;
 }
 .service__box p{
-    font-size: 15px;
+    font-size: .9rem;
     font-weight: 500;
     padding-bottom: 1.8rem;
-    text-align: justify;
-    line-height: 24px;
+    line-height: 1.4rem;
     font-family: var(--Montserrat-font);
 }
 
 .service__btn{
-    font-size: 15px;
+    font-size: .9rem;
     font-weight: 500;
     background: #cb966a;
     padding: 10px 16px;
