--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,7 +98,6 @@ section .title::after {
 .header__content{
     max-width: 1140px;
     margin: 0 auto;
-    padding: 12rem 15px;
     color: #fff;    
     text-transform: uppercase;
     z-index: 999;
@@ -120,6 +119,13 @@ section .title::after {
     height: 4px;
     background: #cb966a;
     margin-top: 1rem;
+}
+
+
+@media(min-width:1020px){
+    .header__content{
+        padding: 12rem 15px;
+    }
 }
 
 @media(max-width:850px){
