--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,7 +132,16 @@ section .title::after {
     }
 }
 
-
+@media(max-width:850px){
+    .header__content p{
+        font-size: 50px;
+    }
+}
+@media(max-width:600px){
+    .header__content p{
+        font-size: 30px;
+    }
+}
 
 
 
