--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -252,15 +252,16 @@ section .title::after {
 }
 
 .service__btn{
+    display: inline-block;
     font-size: .9rem;
     font-weight: 500;
+    font-family: var(--Montserrat-font);
+    color: #fff;
     background: #cb966a;
     padding: 10px 16px;
     border-radius: 3px;
-    color: #fff;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
     rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
-    display: inline-block;
 }
 
 @media(min-width:1020px){
