--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -305,7 +305,7 @@ section .title::after {
     font-weight: 500;
     padding-bottom: 1.8rem;
     line-height: 1.6rem;
-    font-family: var(--Montserrat-font);
+    font-family: 'Sen',sans-serif;
 }
 
 .service__btn{
