--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -734,3 +734,37 @@ section .title::after {
     margin:4rem 0 1rem 0;
     padding: 0 15px;
 }
+
+
+
+.scroll__container{
+    position: fixed;
+    bottom: 15px;
+    right: 20px;
+    text-align: center;
+    background-color: #cb966a;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    border-radius: 50px;
+    z-index: 999;
+    opacity: 0;
+    visibility: hidden;
+    transition: all .7s ease;
+}
+.scroll__container.active{
+    opacity: 1;
+    visibility: visible;
+    bottom: 20px;
+}
+
+.scroll__btn{
+    outline: none;
+    background: transparent;
+    border: none;
+    width: 45px;
+    height: 45px;
+    cursor: pointer;
+}
+.scroll__btn i {
+    font-size: 1.5rem;
+    color: rgb(0, 0, 0);
+}
