--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -742,7 +742,7 @@ section .title::after {
     bottom: 15px;
     right: 20px;
     text-align: center;
-    background-color: #cb966a;
+    background-color: #daa376;
     box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
     border-radius: 50px;
     z-index: 999;
